--- a/style.css
+++ b/style.css
@@ -69,3 +69,146 @@ nav {
     background-color: var(--primary-color-dark);
 }
 
+.container {
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    display: flex;
+    min-height: calc(100vh - 100px);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+}
+
+.content_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   
+}
+
+.content_container h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 3.5rem;
+    color: var(--primary-color-dark);
+    margin-bottom: 1rem;
+}
+
+.heading_1 {
+    font-weight: 700;
+}
+
+.heading_2 {
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+.content_container p {
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-bottom: 2rem;
+}
+
+.content_container form {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+.content_container input {
+    width: 100%;
+    max-width: 300px;
+    padding: 1rem;
+    font-size: 0.8rem;
+    outline: none;
+    border: none;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.content_container button {
+    width: fit-content;
+    padding: 1rem;
+    white-space: nowrap;
+    font-size: 0.8rem;
+    color: var(--white);
+    background-color: var(--primary-color);
+    border: none;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.content_container button:hover {
+    background-color: var(--primary-color-dark);
+}
+
+.image_container {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    place-content: center;
+}
+
+.image_container img {
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.image_container img:nth-child(1) {
+    transform: translateY(-70px);
+}
+
+.image_container img:nth-child(2) {
+    transform: translateY(70px);
+}
+
+.image_content {
+    position: absolute;
+    width: 100%;
+    max-width: 310px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-35%, -50%);
+    background: linear-gradient(
+        to right,
+        var(--primary-color),
+        var(--primary-color-dark)
+    );
+    color: var(--white);
+    padding: 1rem 2rem;
+    border-radius: 10px;
+}
+
+.image_content li {
+    margin-bottom: 0.5rem;
+}
+
+@media (width < 900px) {
+  .link a:not(.nav__btn) {
+    display: none;
+  }
+
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .content__container {
+    text-align: center;
+  }
+
+  .content__container form {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .image__container {
+    grid-area: 1/1/2/2;
+  }
+
+  .image__container img {
+    transform: translateY(0) !important;
+  }
+}
